--- a/Customise_Filter/css/index.css
+++ b/Customise_Filter/css/index.css
@@ -15,6 +15,7 @@ input{
     max-width: 450px;
     margin-top: 60px;
     font-size: 18px;
+    background-color: #fff;
 }
 input:focus{
     outline: none;
